Fix visible main page

--- a/src/pages/home_page/home_page.module.css
+++ b/src/pages/home_page/home_page.module.css
@@ -9,6 +9,14 @@
   min-width: 700px;
 }
 
+.emptyWrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100vh;
+}
+
 .title {
   font-family: Helvetica;
   font-size: 48px;
